--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
-  password: ishu207
+  username: mvc
+  password: 123
+  #username: postgres
+  #password: ishu207
   host: localhost
   port: 5432
 
@@ -85,5 +87,6 @@ test:
 production:
   <<: *default
   database: vespa_clone_production
-  username: postgres
+  username: mvc
+  #username: postgres
   password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
