--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,4 @@ test:
 #
 production:
   <<: *default
-  database: vespa_clone_production
-  username: mvc
-  #username: postgres
-  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
