--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: vespa_clone
+          name: mysite
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
